# fwt-lancinate

./: .gitignore  .gitpod.yml  Cargo.toml  appsettings.toml  foo.csv  log4rs.yml
folder/: sample.py  sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample37.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
src/: main.rs
