[package]
name = "filewatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
serde = { version = "1.0.193", features = ["std", "derive", "serde_derive"] }
