[package]
name = "filewatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
config = "0.14.0"
csv = "1.3.0"
log = "0.4.21"
log4rs = "1.3.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
serde = { version = "1.0.193", features = ["std", "derive", "serde_derive"] }
